creating a dataframe from APIand examining a data

--- a/chap1.ipynb
+++ b/chap1.ipynb
@@ -1152,6 +1152,170 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alert</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>magType</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tsunami</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>green</td>\n",
+       "      <td>5.20</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>M 5.2 - 118 km E of Chignik, Alaska</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>937</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>M 4.2 - 251 km SE of Chignik, Alaska</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1468</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.30</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>M 5.3 - Vancouver Island, Canada region</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1948</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.30</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>M 5.3 - 41 km NW of Nelson Lagoon, Alaska</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2239</th>\n",
+       "      <td>green</td>\n",
+       "      <td>6.70</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>M 6.7 - 58 km WSW of Masachapa, Nicaragua</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4292</th>\n",
+       "      <td>green</td>\n",
+       "      <td>4.54</td>\n",
+       "      <td>mw</td>\n",
+       "      <td>M 4.5 - 20km W of El Sauzal, B.C., MX</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6130</th>\n",
+       "      <td>green</td>\n",
+       "      <td>5.70</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>M 5.7 - Rat Islands, Aleutian Islands, Alaska</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8900</th>\n",
+       "      <td>green</td>\n",
+       "      <td>6.40</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>M 6.4 - southeast of the Loyalty Islands</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9114</th>\n",
+       "      <td>green</td>\n",
+       "      <td>7.00</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>M 7.0 - 281 km ESE of Tadine, New Caledonia</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9246</th>\n",
+       "      <td>green</td>\n",
+       "      <td>6.90</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>M 6.9 - 286 km ESE of Tadine, New Caledonia</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      alert   mag magType                                          title  \\\n",
+       "242   green  5.20      ml            M 5.2 - 118 km E of Chignik, Alaska   \n",
+       "937     NaN  4.20      ml           M 4.2 - 251 km SE of Chignik, Alaska   \n",
+       "1468    NaN  5.30     mww        M 5.3 - Vancouver Island, Canada region   \n",
+       "1948    NaN  5.30     mww      M 5.3 - 41 km NW of Nelson Lagoon, Alaska   \n",
+       "2239  green  6.70     mww      M 6.7 - 58 km WSW of Masachapa, Nicaragua   \n",
+       "4292  green  4.54      mw          M 4.5 - 20km W of El Sauzal, B.C., MX   \n",
+       "6130  green  5.70     mww  M 5.7 - Rat Islands, Aleutian Islands, Alaska   \n",
+       "8900  green  6.40     mww       M 6.4 - southeast of the Loyalty Islands   \n",
+       "9114  green  7.00     mww    M 7.0 - 281 km ESE of Tadine, New Caledonia   \n",
+       "9246  green  6.90     mww    M 6.9 - 286 km ESE of Tadine, New Caledonia   \n",
+       "\n",
+       "      tsunami        type  \n",
+       "242         1  earthquake  \n",
+       "937         1  earthquake  \n",
+       "1468        1  earthquake  \n",
+       "1948        1  earthquake  \n",
+       "2239        1  earthquake  \n",
+       "4292        1  earthquake  \n",
+       "6130        1  earthquake  \n",
+       "8900        1  earthquake  \n",
+       "9114        1  earthquake  \n",
+       "9246        1  earthquake  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df['tsunami']==1,['alert', 'mag', 'magType', 'title', 'tsunami', 'type']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
